<resources>
    <string name="app_name">AdminClient</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="arrow">\u2192</string>
    <string name="enable">Enable</string>
    <string name="customers">Customers</string>
    <string name="customer_details">Customer details</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_cars">Cars</string>
    <string name="title_customers">Customers</string>
    <string name="current_location">Current Location</string>
    <string name="state">State</string>
    <string name="station">Station</string>
    <string name="car_model">Car model</string>
    <string name="car_brand">Car brand</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="engine_type">Engine type </string>
    <string name="car_licence_plate">Car licence plate</string>
    <string name="car_color">Car color</string>
    <string name="car_km">Car KM</string>
    <string name="car_price">Car price</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="title_rents">Rents</string>
    <string name="close_rent">Close rent</string>
    <string name="title_activity_maps">Maps</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="licence_card">Licence Card:</string>
    <string name="expiration_date">Expiration date:</string>
    <string name="licence_card_back">Licence card back</string>
    <string name="licence_card_front">Licence card front</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="end_station">End station</string>
    <string name="start_station">Start station</string>
    <string name="planned">Planned</string>
    <string name="actual">Actual</string>
    <string name="actual_start_end">Actual Start/End</string>
    <string name="planned_start_end">Planned Start/End</string>
</resources>
