<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentDetailActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/car_model"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvRentActualStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRentCarModels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvRentActualStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tvRentActualEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tvRentPlannedEnd"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvRentActualStart"
        app:layout_constraintEnd_toStartOf="@id/tvRentActualStart"
        android:id="@+id/tvRentPlannedStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvRentActualStart"
        app:layout_constraintStart_toEndOf="@id/tvRentPlannedEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvActualText"
        android:id="@+id/tvRentActualEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/tvRentActualEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvRentActualEnd"
        android:id="@+id/tvRentPlannedEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/actual_start_end"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRentPlannedEnd"
        app:layout_constraintTop_toTopOf="@id/tvActualText" />

    <TextView
        android:id="@+id/tvActualText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/planned_start_end"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvRentStartStationNames"
        app:layout_constraintEnd_toStartOf="@id/tvRentActualEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRentActualEnd" />

    <TextView
        android:id="@+id/tvRentStartStationNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvRentStartStation"
        app:layout_constraintEnd_toEndOf="@+id/tvRentStartStation"
        app:layout_constraintStart_toEndOf="@+id/tvRendEndStation"
        app:layout_constraintTop_toBottomOf="@+id/tvActualText" />

    <TextView
        android:id="@+id/tvRentStartStation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_station"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvRentStartStationNames"
        app:layout_constraintBottom_toTopOf="@id/ivRentBefore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRentPlannedEnd" />

    <TextView
        android:id="@+id/tvRentEndStationNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvRentStartStationNames"
        app:layout_constraintEnd_toEndOf="@+id/tvRendEndStation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRentStartStationNames" />
    <TextView
        android:id="@+id/tvRendEndStation"
        android:textStyle="bold"
        android:text="@string/end_station"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/tvRentStartStation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvRentActualEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/ivRentBefore"
        android:layout_height="200dp"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivRentAfter"
        app:layout_constraintEnd_toStartOf="@+id/ivRentAfter"
        app:layout_constraintBottom_toBottomOf="@id/ivRentAfter"
        />

    <ImageView
        android:id="@+id/ivRentAfter"
        android:layout_height="200dp"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivRentBefore"
        app:layout_constraintTop_toBottomOf="@id/tvRentStartStation"
        app:layout_constraintBottom_toTopOf="@id/btCloseRent"
        />

    <Button
        android:id="@+id/btCloseRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivRentAfter"
        android:text="@string/close_rent"/>


</androidx.constraintlayout.widget.ConstraintLayout>