<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentDetailActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/car_model"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvRentActualStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRentCarModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvRentActualStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tvRentActualEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/tvRentPlannedEnd"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvRentActualStart"
        app:layout_constraintEnd_toStartOf="@id/tvRentActualStart"
        android:id="@+id/tvRentPlannedStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvRentActualStart"
        app:layout_constraintStart_toEndOf="@id/tvRentPlannedEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvActualText"
        android:id="@+id/tvRentActualEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/tvRentActualEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvRentActualEnd"
        android:id="@+id/tvRentPlannedEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/actual_start_end"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRentPlannedEnd"
        app:layout_constraintTop_toTopOf="@id/tvActualText" />

    <TextView
        android:id="@+id/tvActualText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/planned_start_end"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvRentStartStationName"
        app:layout_constraintEnd_toStartOf="@id/tvRentActualEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRentActualEnd" />

    <TextView
        android:id="@+id/tvRentStartStationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvRentStartStation"
        app:layout_constraintEnd_toEndOf="@+id/tvRentStartStation"
        app:layout_constraintStart_toEndOf="@+id/tvRendEndStation"
        app:layout_constraintTop_toBottomOf="@+id/tvActualText" />

    <TextView
        android:id="@+id/tvRentStartStation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_station"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvRentStartStationName"
        app:layout_constraintBottom_toTopOf="@id/mvRentMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvRentPlannedEnd" />

    <TextView
        android:id="@+id/tvRentEndStationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvRentStartStationName"
        app:layout_constraintEnd_toEndOf="@+id/tvRendEndStation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRentStartStationName" />
    <TextView
        android:id="@+id/tvRendEndStation"
        android:textStyle="bold"
        android:text="@string/end_station"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/tvRentStartStation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvRentActualEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <fragment
        class="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/mvRentMap"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@id/btCloseRent"
        app:layout_constraintTop_toBottomOf="@+id/tvRentStartStation"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"/>

    <Button
        android:id="@+id/btCloseRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mvRentMap"
        android:text="Location request"/>


</androidx.constraintlayout.widget.ConstraintLayout>